# sketchmap-python

./: CMakeLists.txt  README.md
sketchmap/: sketchmap.py
src/: libmath.h  libsketchmap.cpp  libsketchmap.h  sketchmap.cpp
